# ASCII-Tree-Project

./: .gitignore  README.md  build.py  pyproject.toml
hooks/: hook-customtkinter.py
src/treefy/: __main__.py
src/treefy/core/: config.py  exporter.py  ignore.py  selection.py  stats.py  treebuilder.py  utils.py
src/treefy/gui/: app.py  events.py  sidebar.py  statspanel.py  treeview.py
tests/: test_selection.py
